ptite modif de la description

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div>
           <div class="pdf-title">Une balade à la forêt</div>
           <div class="small"> 
-            Une annecdote avec qui mêle action, introspection, et description.</div>
+            Une annecdote qui mêle action, introspection, et description.</div>
         </div>
         <div class="actions">
           <a class="btn ghost" href="pdf/Lire balade à la forêt.pdf" target="_blank">Lire en ligne</a>
