Correction de fautes d'orthographes

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <section class="card">
       <h2>À propos de moi</h2>
       <p>
-        Je m'appelle Mohamed, j'ai 21 ans. Mon domaine de prédiléction c'est l'informatique mais j'ai beaucoup d'autres centres d'intérêts
+        Je m'appelle Mohamed, j'ai 21 ans. Mon domaine de prédilection c'est l'informatique mais j'ai beaucoup d'autres centres d'intérêts
         comme le street-workout, le beatbox et la lecture. Je suis accro à l'adrénaline et amoureux de la nature. Mes potes me disent souvent que j'suis fou.
-        Je penses que j'ai une imagination débordante, et même si je suis plutôt stable et jovial, je me sens seul et à l'écart du monde moderne.
+        Je pense que j'ai une imagination débordante, et même si je suis plutôt stable et jovial, je me sens seul et à l'écart du monde moderne.
         J'éprouve le besoin de m'exprimer car ce n'est pas toujours facile de se retrouver face à soi-même et ses peurs, ses pensées. Je crois que c'est quelque chose qu'on ressens tous à différents degrés à travers nos vies.
         J'écris parce que la vie c'est aussi une histoire, un beau voyage qui mérite d'être raconté.
       </p>
