Changement du pdf pour la police d'écriture

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             Une annecdote avec qui mêle action, introspection, et description.</div>
         </div>
         <div class="actions">
-          <a class="btn ghost" href="pdf/Lire balade à la forêt.pdf" target="_blank">Lire en ligne</a>
+          <a class="btn ghost" href="pdf/Balade à la forêt (Comic Sans).pdf" target="_blank">Lire en ligne</a>
         </div>
       </div>
     </div>
